--- a/iam/.env-example.env
+++ b/iam/.env-example.env
@@ -23,6 +23,7 @@ GTC_STAKING_GRAPH_API_KEY=MY_API_KEY
 COINBASE_CLIENT_ID=MY_COINBASE_CLIENT_ID
 COINBASE_CLIENT_SECRET=MY_COINBASE_CLIENT_SECRET
 COINBASE_CALLBACK=http://localhost:3000/
+MUMBAI_RPC_URL=MY_MUMBAI_RPC_URL
 
 CURRENT_ENV=development
 
